fix: fixed bugs with the domain